--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ jobs:
 install:
   # - pip install -r requirements.txt
   - python3 -m pip install -e .
-  - pip install codecov
+  - pip3 install codecov
 # command to run tests
 script:
   - coverage run -m unittest discover src
