--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,7 +19,7 @@ repos:
   rev: v4.3.20
   hooks:
   - id: isort
-    args: []
+    args: [-rc src]
     additional_dependencies: [toml]
 
 - repo: https://github.com/psf/black
