--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,8 +19,9 @@ repos:
   rev: v4.3.20
   hooks:
   - id: isort
-    args: [-rc src]
+    args: []
     additional_dependencies: [toml]
+    exclude: src/simmer/tests
 
 - repo: https://github.com/psf/black
   rev: 19.3b0
