--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,4 +23,4 @@ multi_line_output = 3
 include_trailing_comma = true
 force_grid_wrap = 0
 use_parentheses = true
-known_third_party = ["astropy", "corner", "jupytext", "matplotlib", "nbconvert", "nbformat", "numpy", "packaging", "pandas", "pkg_resources", "pymc3", "pytest", "requests", "scipy", "setuptools", "sphinx_typlog_theme", "theano"]
+known_third_party = ["PIL", "add_dark_exp", "astropy", "darks", "drivers", "flats", "image", "insts", "matplotlib", "numpy", "openpyxl", "pandas", "registration", "scipy", "scipy_utils", "setuptools", "skimage", "sky", "tqdm", "utils"]
