put the exclusions in brackets

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,5 +23,5 @@ multi_line_output = 3
 include_trailing_comma = true
 force_grid_wrap = 0
 use_parentheses = true
-skip_glob = "simmer/tests/*"
+skip_glob = ["src/simmer/tests/*"]
 known_third_party = ["PIL", "add_dark_exp", "astropy", "darks", "drivers", "flats", "image", "insts", "matplotlib", "numpy", "openpyxl", "pandas", "registration", "scipy", "scipy_utils", "setuptools", "skimage", "sky", "tqdm", "utils"]
