--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,4 +24,5 @@ include_trailing_comma = true
 force_grid_wrap = 0
 use_parentheses = true
 skip_glob = ["src/simmer/tests/*"]
+skip = tests_1.py
 known_third_party = ["PIL", "add_dark_exp", "astropy", "darks", "drivers", "flats", "image", "insts", "matplotlib", "numpy", "openpyxl", "pandas", "registration", "scipy", "scipy_utils", "setuptools", "skimage", "sky", "tqdm", "utils"]
