--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,3 @@
-# inspired by exoplanet: https://github.com/exoplanet-dev/exoplanet/blob/master/pyproject.toml
 [build-system]
 requires = ["setuptools>=40.6.0", "wheel", "setuptools_scm"]
 build-backend = "setuptools.build_meta"
@@ -11,18 +10,21 @@ exclude = '''
   | \.git
   | \.hg
   | \.mypy_cache
+  | \.tox
+  | \.venv
   | _build
+  | buck-out
   | build
   | dist
+  | docs/tutorials
 )/
 '''
 
 [tool.isort]
+skip_glob = ["docs/tutorials/*.py"]
 line_length = 79
 multi_line_output = 3
 include_trailing_comma = true
 force_grid_wrap = 0
 use_parentheses = true
-skip_glob = ["src/simmer/tests/*"]
-skip = tests_1.py
 known_third_party = ["PIL", "add_dark_exp", "astropy", "darks", "drivers", "flats", "image", "insts", "matplotlib", "numpy", "openpyxl", "pandas", "registration", "scipy", "scipy_utils", "setuptools", "skimage", "sky", "tqdm", "utils"]
