--- a/src/simmer/schemas/plotting.yml
+++ b/src/simmer/schemas/plotting.yml
@@ -1,34 +1,64 @@
 # For plotting purposes. Descriptions provided as meta.
 
-plot_all:
-  type: "boolean"
-  default: "true"
-  meta: Whether or not to plot everything.
-
-all_colorbars:
-  type: "boolean"
-  default: "true"
-  dependencies: plot_all
-  meta: Setting to determine whether to turn on colorbars (labeled) for
-    all plots produced by SImMER.
-
-all_colormaps:
-  type: "string"
-  default: "plasma"
-  dependencies: plot_all
-  meta: Sets the colormap of all produced plots produced by SImMer.
-    Checks against matplotlib colormaps later on and will default to "plasma".
-
-# figure out how to do nested mapping
-
-##rots:
-#
-final:
+final_im:
   type: "dict"
   schema:
+    plot:
+      type: "boolean"
+      default: "true"
+      meta: Whether or not to produce a plot of the final image.
+    output_fits:
+      type: "boolean"
+      default: "true"
+      meta: Whether or not to output a .fits file of the final image in addition
+        to the .png file.
     zoom:
       type: "float"
       min: "1"
       default: "0"
       meta: zoom in on the center of an image with box width of `zoom`
         pixels. A zoom of 0 leads to no zoom.
+    colorbars:
+      type: "boolean"
+      default: "true"
+      dependencies: plot_all
+      meta: Setting to determine whether to turn on colorbars (labeled) for
+        all plots produced by SImMER.
+    colormap:
+      type: "string"
+      default: "plasma"
+      dependencies: plot_all
+      meta: Sets the colormap of all produced plots produced by SImMer.
+        Checks against matplotlib colormaps later on and will default
+        to "plasma".
+rots:
+  type: "dict"
+  schema:
+    plot:
+      type: "boolean"
+      default: "true"
+      meta: Whether or not to produce a plot of the final image.
+    output_fits:
+      type: "boolean"
+      default: "true"
+      meta: Whether or not to output a .fits file of the final image in addition
+        to the .png file.
+    zoom:
+      type: "float"
+      min: "1"
+      default: "0"
+      meta: zoom in on the center of an image with box width of `zoom`
+        pixels. A zoom of 0 leads to no zoom.
+    colorbars:
+      type: "boolean"
+      default: "true"
+      dependencies: plot_all
+      meta: Setting to determine whether to turn on colorbars (labeled) for
+        all plots produced by SImMER.
+    colormap:
+      type: "string"
+      default: "plasma"
+      dependencies: plot_all
+      meta: Sets the colormap of all produced plots produced by SImMer.
+        Checks against matplotlib colormaps later on and will default
+        to "plasma".
