--- a/.github/workflows/yaml.yml
+++ b/.github/workflows/yaml.yml
@@ -7,3 +7,5 @@ jobs:
       - uses: actions/checkout@v1
       - name: yaml-lint
         uses: ibiqlik/action-yamllint@v1
+        with:
+          config_file: .yamllint
