--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -15,6 +15,7 @@ jobs:
         run: |
           python -m pip install -U pip
           python -m pip install -U sphinx_rtd_theme
+          python -m pip install .
       - uses: actions/checkout@v1
       - uses: ammaraskar/sphinx-action@master
         with:
