Add config / checker for plotting (#24)
* Beginning of class for checking logsheets?

* Added new test file for yml

* Made plotting work for yml

* Made custom validator

* isort no longer in testing

* Made sure yaml-related packages are installed

* Added new min zoom test, reconfigured to fit new schema [skip ci]

* Error message is actually informative now

* Plotting yml is now on a per-image production basis

* added ability to read yml [skip ci]

* Now incorporating os in io testing

* Moving some funcs from utils to plotting [skip ci]

* Just a check [skip ci]

* Change where yml schema is read from in tests

* remove plotting imports from utils [skip ci]

* Changed zoom arg to zoom_scale, added scaling arg

* Adding few more funcs [skip ci]

* Implemented basic zoom function [skip ci]

* Made zoom a global function [skip ci]

* Forgot to import numpy in plotting [skip ci]

* Added plot type checker [skip ci]

* Finished implementing add_colorbars...for now [skip ci]

* Added if block before calling add_colorbars

* Removed plotting dependencies [skip ci]

* Added a few more things...[skip ci]

* Altered func to get plotting args [skip ci]

* Get plotting config in drivers

* get_plotting_config now called in default scenario with none [skip ci]

* Added docstrings to read_yml funcs [skip ci]

* Changed default plotting_yml to None

* Calling new plotting files in every func

* Fixed imports

* Change imports, yml structure [skip ci]

* Fixing importa, tests

* Forgot to import plotting lib [skip ci]

* Fixed paths in tests

* No longer using relative path

* Debugged plotting implementation w.r.t. imports, files; added tests

* New imports need to be added to toml file!

* YAML needs to be added to the toml.

* Renamed plotting.yml to plotting_schema.yml

* implemented scaling

* forgot to add .yml to plotting_schema filename

* Fixed plotting_schema

* Actually using v

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,6 +28,7 @@ repos:
     rev: 19.3b0
     hooks:
       - id: black
+        exclude: src/simmer/__init__.py
 
   - repo: https://github.com/dfm/black_nbconvert
     rev: stable
