--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ exclude = '''
   | buck-out
   | build
   | dist
+  | src/simmer/__init__.py
   | docs/tutorials
 )/
 '''
@@ -27,4 +28,4 @@ multi_line_output = 3
 include_trailing_comma = true
 force_grid_wrap = 0
 use_parentheses = true
-known_third_party = ["PIL", "add_dark_exp", "astropy", "darks", "drivers", "flats", "image", "insts", "matplotlib", "numpy", "openpyxl", "pandas", "registration", "scipy", "scipy_utils", "setuptools", "skimage", "sky", "tqdm", "utils"]
+known_third_party = ["PIL", "add_dark_exp", "astropy", "darks", "drivers", "plotting", "schemas", "cerberus", "yaml", "flats", "image", "insts", "matplotlib", "numpy", "openpyxl", "pandas", "registration", "scipy", "scipy_utils", "setuptools", "skimage", "sky", "tqdm", "utils"]
