--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,4 +28,4 @@ multi_line_output = 3
 include_trailing_comma = true
 force_grid_wrap = 0
 use_parentheses = true
-known_third_party = ["PIL", "add_dark_exp", "astropy", "darks", "drivers", "plotting", "schemas", "cerberus", "yaml", "flats", "image", "insts", "matplotlib", "numpy", "openpyxl", "pandas", "registration", "scipy", "scipy_utils", "setuptools", "skimage", "sky", "tqdm", "utils"]
+known_third_party = ["PIL", "add_dark_exp", "astropy", "darks", "drivers", "search_headers", "plotting", "schemas", "cerberus", "yaml", "flats", "image", "insts", "matplotlib", "numpy", "openpyxl", "pandas", "registration", "scipy", "scipy_utils", "setuptools", "skimage", "sky", "tqdm", "utils"]
