--- a/.github/workflows/Docs.yml
+++ b/.github/workflows/Docs.yml
@@ -28,7 +28,7 @@ jobs:
           path: docs/pages
 
       - name: Trigger RTDs build
-        uses: dfm/rtds-action
+        uses: dfm/rtds-action@v1.0.0
         with:
           webhook_url: ${{ secrets.RTDS_WEBHOOK_URL }}
           webhook_token: ${{ secrets.RTDS_WEBHOOK_TOKEN }}
