--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -2,5 +2,6 @@ build:
     image: latest
 
 python:
-    version: 3.7
-    setup_py_install: true
+  version: 3.7
+  install:
+    - requirements: docs/notebook_requirements.txt
