--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=40.6.0", "wheel", "setuptools_scm", "extension-helpers"]
+requires = ["setuptools>=40.6.0", "wheel", "setuptools_scm", "extension_helpers"]
 build-backend = "setuptools.build_meta"
 
 [tool.black]
