--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -3,4 +3,9 @@ build:
 
 python:
   version: 3.7
-  setup_py_install: true
+  install:
+    - method: pip
+      path: .
+      extra_requirements:
+        - docs
+        - all
