--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -2,7 +2,8 @@ build:
     image: latest
 
 python:
-  version: 3.7
+  version: 3.8
+  system_packages: false
   install:
     - method: pip
       path: .
