--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -1,10 +1,15 @@
-build:
-    image: latest
+version: 2
+
+submodules:
+  include: all
 
 python:
-  version: 3.8
+  version: 3.7
   install:
     - method: pip
       path: .
       extra_requirements:
         - docs
+
+sphinx:
+  builder: dirhtml
