--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,4 +28,4 @@ multi_line_output = 3
 include_trailing_comma = true
 force_grid_wrap = 0
 use_parentheses = true
-known_third_party = ["Contrast", "PIL", "astropy", "cerberus", "matplotlib", "nbconvert", "nbformat", "numpy", "openpyxl", "pandas", "photutils", "scipy", "setuptools", "skimage", "tqdm", "yaml"]
+known_third_party = ["contrast", "PIL", "astropy", "cerberus", "matplotlib", "nbconvert", "nbformat", "numpy", "openpyxl", "pandas", "photutils", "scipy", "setuptools", "skimage", "tqdm", "yaml"]
