--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -47,6 +47,10 @@ steps:
       '[skip ci]'))
 
   - script: |
+      MY_PAT=${{ secrets.AZURE_TOKEN }}
+      B64_PAT=$(printf ":$MY_PAT" | base64)
+      git config --local http.version HTTP/1.1
+      export B64_PAT=B64_PAT     
       coverage run -m unittest discover src
     displayName: 'unit test'
     condition: not(contains(variables['Build.SourceVersionMessage'],
