--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -47,7 +47,7 @@ steps:
       '[skip ci]'))
 
   - script: |
-      MY_PAT=${{ secrets.AZURE_TOKEN }}
+      MY_PAT=$(azure_token)
       B64_PAT=$(printf ":$MY_PAT" | base64)
       git config --local http.version HTTP/1.1
       export B64_PAT=B64_PAT     
