--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,6 +36,7 @@ steps:
   - task: UsePythonVersion@0
     inputs:
       versionSpec: '$(python.version)'
+      
 
   - script: |
       python -m pip install --upgrade pip
@@ -45,12 +46,19 @@ steps:
     displayName: 'Install dependencies'
     condition: not(contains(variables['Build.SourceVersionMessage'],
       '[skip ci]'))
-
-  - script: |
+      
+  - bash: |
       MY_PAT=$(azure_token)
       B64_PAT=$(printf ":$MY_PAT" | base64)
-      git config --local http.version HTTP/1.1
-      export B64_PAT=B64_PAT
+      git -c http.extraHeader="Authorization: Basic ${B64_PAT}" clone https://asavel@dev.azure.com/asavel/SImMER/_git/simmer-dat
+      cd simmer-data; git -c http.extraHeader="Authorization: Basic ${B64_PAT}" lfs fetch --all
+      export DOWNLOADED_DATA=1
+      cd ..
+    displayName: 'Fetch reference data'
+    condition: not(contains(variables['Build.SourceVersionMessage'],
+      '[skip ci]'))
+
+  - script: |
       coverage run -m unittest discover src
     displayName: 'unit test'
     condition: not(contains(variables['Build.SourceVersionMessage'],
