--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,7 +52,7 @@ steps:
       B64_PAT=$(printf ":$MY_PAT" | base64)
       git -c http.extraHeader="Authorization: Basic ${B64_PAT}" clone https://asavel@dev.azure.com/asavel/SImMER/_git/simmer-dat
       cd simmer-data; git -c http.extraHeader="Authorization: Basic ${B64_PAT}" lfs fetch --all
-      export DOWNLOADED_DATA=1
+      export REFERENCE_DIR=pwd 
       cd ..
     displayName: 'Fetch reference data'
     condition: not(contains(variables['Build.SourceVersionMessage'],
@@ -60,6 +60,7 @@ steps:
 
   - script: |
       coverage run -m unittest discover src
+      export REPO_DIR=pwd
     displayName: 'unit test'
     condition: not(contains(variables['Build.SourceVersionMessage'],
       '[skip ci]'))
