--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,6 +52,7 @@ steps:
       B64_PAT=$(printf ":$MY_PAT" | base64)
       git -c http.extraHeader="Authorization: Basic ${B64_PAT}" clone https://asavel@dev.azure.com/asavel/SImMER/_git/simmer-dat
       cd simmer-data; git -c http.extraHeader="Authorization: Basic ${B64_PAT}" lfs fetch --all 
+      printf $(pwd)
       cd ..
     displayName: 'Fetch reference data'
     condition: not(contains(variables['Build.SourceVersionMessage'],
@@ -60,8 +61,10 @@ steps:
   - script: |
       cd ../simmer-data
       export REFERENCE_DIR=$(pwd)
+      printf $(pwd)
       cd ../SImMER
       export REPO_DIR=$(pwd)
+      printf $(pwd)
       coverage run -m unittest discover src
     displayName: 'unit test'
     condition: not(contains(variables['Build.SourceVersionMessage'],
