--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,7 +51,7 @@ steps:
       MY_PAT=$(azure_token)
       B64_PAT=$(printf ":$MY_PAT" | base64)
       git -c http.extraHeader="Authorization: Basic ${B64_PAT}" clone https://asavel@dev.azure.com/asavel/SImMER/_git/simmer-data
-      cd simmer-data; git -c http.extraHeader="Authorization: Basic ${B64_PAT}" lfs fetch --all 
+      cd simmer-data; git -c http.extraHeader="Authorization: Basic ${B64_PAT}" lfs fetch --include=dark_test.zip 
       printf $(pwd)
       cd ..
     displayName: 'Fetch reference data'
