--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,13 +52,14 @@ steps:
       B64_PAT=$(printf ":$MY_PAT" | base64)
       git -c http.extraHeader="Authorization: Basic ${B64_PAT}" clone https://asavel@dev.azure.com/asavel/SImMER/_git/simmer-data
       cd simmer-data; git -c http.extraHeader="Authorization: Basic ${B64_PAT}" lfs fetch --include=dark_test.zip 
-      printf $(pwd)
+      python3 -c "import os; print(os.listdir()); print(os.getcwd())"
       cd ..
     displayName: 'Fetch reference data'
     condition: not(contains(variables['Build.SourceVersionMessage'],
       '[skip ci]'))
 
   - script: |
+      python3 -c "import os; print(os.listdir()); print(os.getcwd())"
       cd ../simmer-data
       export REFERENCE_DIR=$(pwd)
       printf $(pwd)
