--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -17,6 +17,7 @@ jobs:
         python-version: 3.7
     - name: clone refdata
       run: |
+        git lfs install --skip-smudge
         MY_PAT=${{ secrets.AZURE_TOKEN }}
         B64_PAT=$(printf ":$MY_PAT" | base64)
         git -c http.extraHeader="Authorization: Basic ${B64_PAT}" clone https://asavel@dev.azure.com/asavel/SImMER/_git/simmer-data
