--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -22,7 +22,9 @@ jobs:
         B64_PAT=$(printf ":$MY_PAT" | base64)
         git -c http.extraHeader="Authorization: Basic ${B64_PAT}" clone https://asavel@dev.azure.com/asavel/SImMER/_git/simmer-data
         python3 -c "print('cloned!')"
-        cd simmer-data; git -c http.extraHeader="Authorization: Basic ${B64_PAT}" lfs fetch --include=dark_test.zip 
+        cd simmer-data; git -c http.extraHeader="Authorization: Basic ${B64_PAT}" lfs fetch --include=dark_test.zip
+        git lfs pull
+        git lfs install --force
         python3 -c "import os; print(os.listdir()); print(os.getcwd())"
         du -sh .
         cd ..
