--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -9,7 +9,7 @@ python:
     - method: pip
       path: .
       extra_requirements:
-        - docs
+        - docs/requirements.txt
 
 sphinx:
   builder: dirhtml
