--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -8,8 +8,7 @@ python:
   install:
     - method: pip
       path: .
-      extra_requirements:
-        - docs/requirements.txt
+      extra_requirements: docs/requirements.txt
 
 sphinx:
   builder: dirhtml
