--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -4,11 +4,8 @@ submodules:
   include: all
 
 python:
-  version: 3.7
-  install:
-    - method: pip
-      path: .
-      extra_requirements: docs/requirements.txt
+   install:
+   - requirements: docs/requirements.txt
 
 sphinx:
   builder: dirhtml
