--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ dependencies = [
     "astropy >=5.1",
     "openpyxl>=2.5.12",
     "scipy",
-    "matplotlib <3.1.1,>=3.0.1",
+    "matplotlib",
     "Scikit-image>=0.16.2",
     "pyyaml>=5.3.1",
     "numba",
