--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -30,10 +30,11 @@ jobs:
           python3 -m pip install -U pip
           python3 -m pip install -U setuptools setuptools_scm pep517
           python3 -m pip install -e .
+          pip3 install codecov
 
       - name: Run tests
         run: |
-         python -m unittest discover src
+         coverage run -m unittest discover src
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4
