--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -1,3 +1,7 @@
+# .readthedocs.yaml
+# Read the Docs configuration file
+# See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
+
 version: 2
 
 submodules:
@@ -7,5 +11,14 @@ python:
   install:
     - requirements: docs/requirements.txt
 
+# Build documentation in the "docs/" directory with Sphinx
 sphinx:
+  configuration: docs/conf.py
+  fail_on_warning: false
   builder: dirhtml
+
+# Set the OS, Python version and other tools you might need
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.9"
