--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,11 @@ dependencies = [
 dynamic = ["version"]
 
 [project.optional-dependencies]
-test = ["pytest"]
+docs = ["nbsphinx",
+        "nbconvert",
+        "pygments>=2.4.2",
+        "Jinja2==3.1.3",
+        "sphinx-book-theme"]
 
 [project.urls]
 Homepage = "https://github.com/arjunsavel/SImMER"
