--- a/.github/workflows/Docs.yml
+++ b/.github/workflows/Docs.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install -U pip
-          python -m pip install -r docs/requirements.txt
+          python -m pip install -e .[docs]
 
       - name: Execute the notebooks
         run: |
